--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-grid-layout": "^1.3.4",
+    "typescript": "4.9.5",
+    "typewriter-effect": "^2.19.0"
+  },
+  "devDependencies": {
+    "sass": "^1.58.3"
   }
 }
